--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
      </div>
     </section>
     
-    <section class="bg-[url('./images/bg.jpg')] bg-center bg-no-repeat bg-cover">
+    <section class="bg-[url('./images/bg.jpg')] bg-center bg-no-repeat bg-cover py-24">
       <div class="w-11/12 mx-auto md:w-9/12">
         <div class="mx-auto text-center lg:w-3/6">
           <div class="flex px-4 py-2 mx-auto bg-green2 w-52 rounded-3xl "> 
@@ -231,7 +231,30 @@
       </div>
     </section>
   </main>
-    
+    <footer class="flex flex-col  items-center py-24 bg-[#1c1c1c]">
+      <div class="w-11/12 lg:w-3/6">
+        <div class="flex justify-center mb-4">
+          <div class="flex items-center justify-center"><i class="p-1 mr-1 -rotate-45 rounded-full fa-solid fa-arrow-right bg-green1"></i></div>
+         <h3 class="text-3xl font-blod text-[#e9e9e9]">Renterio</h3>
+        </div>
+        <div class="text-center">
+          <p class="text-[#737373]  font-semibold">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class= "my-12">
+          <ul class="flex px-1 space-y-3 md:space-x-12 flex-col md:flex-row justify-center items-center text-black4 text-[#e9e9e9]">
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>contact Us</a></li>
+          </ul>
+        </div>
+        <div class="flex justify-center p-2 mx-auto md:w-52 bg-green1 rounded-2xl"> 
+          <button class="text-xl font-blod text-black2">Book Consult</button>
+          <div class=""><a href=""><i class="p-1 ml-2 text-white -rotate-45 rounded-full fa-solid fa-arrow-right bg-black2"></i></a></div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
 <!-- git init
