finaly project finish

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </script>
 </head>
 <body class="font-man">
-  <header class="mt-3 mb-3 lg:mb-24">
+  <header class="mb-3 lg:mt-3 lg:mb-24">
     <nav class="w-11/12 mx-auto my-10">
       <div class="justify-between navbar">
         <div class=" navbar-start">
